[gd_scene load_steps=6 format=3 uid="uid://bsmqul4toh5em"]

[ext_resource type="Script" path="res://Scenes/DirectionalLock/directional_lock.gd" id="1_uppjd"]
[ext_resource type="Texture2D" uid="uid://cjmtj3rqcox15" path="res://Scenes/DirectionalLock/Assets/IMG_2903.PNG" id="2_8xyx7"]
[ext_resource type="Texture2D" uid="uid://c0kolet7xpu52" path="res://Scenes/DirectionalLock/Assets/IMG_2906.PNG" id="4_4dugg"]
[ext_resource type="PackedScene" uid="uid://bm1lsocmpgpqh" path="res://Prefabs/ReturnButton/ReturnButton.tscn" id="4_56tdx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hts16"]
radius = 27.3942

[node name="DirectionalLock" type="Node2D" node_paths=PackedStringArray("Lock")]
script = ExtResource("1_uppjd")
Lock = NodePath("Img2906")
Combination = Array[int]([2, 3, 1, 4])

[node name="SpareBackground" type="Sprite2D" parent="."]
position = Vector2(961, 544)
texture = ExtResource("2_8xyx7")

[node name="Button" type="Button" parent="."]
offset_left = 936.0
offset_top = 288.0
offset_right = 990.0
offset_bottom = 319.0
text = "RESET
"

[node name="ReturnButton" parent="." instance=ExtResource("4_56tdx")]
position = Vector2(40, 32)

[node name="Img2906" type="Sprite2D" parent="."]
position = Vector2(968, 616)
texture = ExtResource("4_4dugg")
offset = Vector2(-5, -73)

[node name="Area2D" type="Area2D" parent="Img2906"]
position = Vector2(-4.76837e-07, -4.76837e-07)
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Img2906/Area2D"]
shape = SubResource("CircleShape2D_hts16")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Img2906/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Img2906/Area2D" to="." method="_on_area_2d_mouse_exited"]
